Make CreateUnique use UTF-16 path names on Windows and correct some bugs with handling over-long filenames. Bug 364285, r=bsmedberg, blocking-firefox3=beltzner